--- a/style.css
+++ b/style.css
@@ -1,24 +1,36 @@
-section{
-    border: 1px solid gray;
-    background-color: lightgray;     
+.rede-social-container{
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: center;
+    justify-content: space-between;   
+    border: 1px solid rgb(253, 244, 244);
+    background-color: lightgray;
+    padding: 1%;
+    display: flex;
+    flex-direction: row;
 }
 
-.rede-social-container {
+
+.rede-social-item {
     color: black;
     border: 1px solid gray;
     background-color: white; 
     display: flex;
     flex-direction: row;
-    width: 50%;
-    margin: auto;
+    justify-content: space-between;
+    width: 45%;
+    padding: 1%;     
+    margin: 10px;
   }
 
 .imagens-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;  
     flex-direction: column;
     width: 30%;
-    margin: 1%;
+    
 }
 
 .imagem-usuário {
@@ -27,17 +39,26 @@ section{
 }
 
 .imagens-redes-sociais {
-    width: 70%;
+    
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    width: 70%;
 }
 
-.info-container{
-    font-family: raleway;
+h1{
+    font-family: "raleway";
+    font-size: 30px;
+}
+
+p{
+    font-family: "raleway";
+}
+
+.info{
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     width: 70%;
     margin-bottom: 1%;
-
 }
+
